--- a/css/style.css
+++ b/css/style.css
@@ -350,7 +350,7 @@ border: 2px solid transparent;
     background-color: white;
     border-radius: 20px;
     box-shadow: 3px 5px 10px 0px #00000021;
-    background-image: url(../img/medicine-background-with-elements.png);
+    background-image: url(../img/background.png);
     background-position: center;
     background-size: contain;
     background-repeat: no-repeat;
@@ -1425,5 +1425,6 @@ section.title {
 .footerCard .btnsCard button:hover {
     background-color: var(--primary-dark);
 }
+
 
 
